# sway-conf-rs

./: .gitignore  Cargo.toml
src/: ast.rs  compiler.rs  layout.rs  lib.rs  primitives.rs
src/ast/: bind.rs
src/compiler/: includes.rs  vars.rs
src/testdata/: tc1.sway
sway-conf/: Cargo.toml
sway-conf/src/: main.rs
testdata/: inc_base.sway  inc_next.sway  tc1.json  tc2.json  tc2.sway  tc3.json  tc3.sway  tc4.json  tc4.sway  tc5.json  tc5.sway  tc6.json  tc6.sway
