[package]
name = "sway-conf"
description = "sway-conf is a library to parse and understand sway configs"
version = "0.1.1"
authors = ["Tom <twitchyliquid64@ciphersink.net>"]
edition = "2018"
categories = ["command-line-utilities", "development-tools", "gui"]
license = "MIT/Apache-2.0"

[dependencies]
bitflags = "1.2"
globset = "0.4"
nom = { version = "6", default-features = false, features = ["alloc"] }
nom_locate = "3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
pretty_assertions = "0.6.1"
test-case = "1.0.0"
