[package]
name = "sway-conf-cli"
version = "0.1.1"
authors = ["Tom <twitchyliquid64@ciphersink.net>"]
edition = "2018"
categories = ["command-line-utilities", "development-tools", "gui"]
license = "MIT/Apache-2.0"

[dependencies]
sway-conf = { version = "0.2.0", path = "../" }
structopt = "0.3.2"
pretty_env_logger = "0.4.0"
log = "0.4.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
prettytable-rs = "^0.8"

[[bin]]
name = "sway-conf"
path = "src/main.rs"
